--- a/Edwinschoice.Server/appsettings.Development.json
+++ b/Edwinschoice.Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Game_Data;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=Data/Game_Data.db"
   },
   "Logging": {
     "LogLevel": {
