--- a/Edwinschoice.Server/Edwinschoice.Server.csproj
+++ b/Edwinschoice.Server/Edwinschoice.Server.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\images\Background_pic_wife.webp" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
