--- a/.github/workflows/sandbox.yml
+++ b/.github/workflows/sandbox.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Sestavení a nahrání kontejnerového obrazu
         uses: docker/build-push-action@v6
         with:
-          context: . # změň cestu podle toho, kde se nachází složka s řešením (soubor .sln)
+          context: ./Edwinschoice.sln # změň cestu podle toho, kde se nachází složka s řešením (soubor .sln)
           file: ./Gamebook.Server/Dockerfile # změň cestu podle toho, kde se nachází Dockerfile
           push: true
           tags: registry.pslib.cloud/sandbox/app-43:latest
