--- a/Edwinschoice.Server/Dockerfile
+++ b/Edwinschoice.Server/Dockerfile
@@ -11,9 +11,8 @@ EXPOSE 8081
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-RUN update apt && apt install nodejs npm -y
+RUN apt update && apt install nodejs npm -y
 WORKDIR /src
-COPY ["edwinschoice.client/nuget.config", "edwinschoice.client/"]
 COPY ["Edwinschoice.Server/Edwinschoice.Server.csproj", "Edwinschoice.Server/"]
 COPY ["edwinschoice.client/edwinschoice.client.esproj", "edwinschoice.client/"]
 RUN dotnet restore "./Edwinschoice.Server/Edwinschoice.Server.csproj"
@@ -24,7 +23,7 @@ RUN dotnet build "./Edwinschoice.Server.csproj" -c $BUILD_CONFIGURATION -o /app/
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Edwinschoice.Server.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Edwinschoice.Server.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
