--- a/Edwinschoice.Server/appsettings.Development.json
+++ b/Edwinschoice.Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=data/Game_Data.db"
+    "DefaultConnection": "Data Source=Data/Game_Data.db"
   },
   "Logging": {
     "LogLevel": {
