--- a/Edwinschoice.Server/appsettings.json
+++ b/Edwinschoice.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=/data/Game_Data.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
